virdant/examples/errors/no_drivers.vir
mod Top {
    wire w : Bit;
}
